// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dialog> renders 1`] = `
<View
  pointerEvents="none"
  style={
    Object {
      "height": "100%",
      "left": 0,
      "maxHeight": "100%",
      "opacity": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <RCTSafeAreaView
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
        Object {
          "backgroundColor": "rgba(0,0,0,0.5)",
        },
        Array [],
      ]
    }
  >
    <View
      enabled={true}
      keyboardVerticalOffset={0}
      onLayout={[Function]}
      style={
        Array [
          Object {
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minWidth": 320,
          },
          Array [],
          Object {
            "backgroundColor": "transparent",
          },
        ]
      }
    >
      <View
        style={
          Array [
            undefined,
            Object {
              "bottom": 0,
            },
          ]
        }
      >
        <View
          pointerEvents="auto"
          style={
            Object {
              "backgroundColor": "#F5F5F6",
              "borderRadius": 3,
              "shadowColor": "#000000",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.33,
              "shadowRadius": 4,
              "transform": Array [
                Object {
                  "translateY": 1334,
                },
              ],
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "flex-end",
              }
            }
          />
          <RCTScrollView
            style={
              Array [
                Object {
                  "paddingBottom": 16,
                  "paddingHorizontal": 16,
                },
                false,
              ]
            }
          >
            <View />
          </RCTScrollView>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`<Dialog> when {background} 1`] = `
<View
  pointerEvents="none"
  style={
    Object {
      "height": "100%",
      "left": 0,
      "maxHeight": "100%",
      "opacity": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <RCTSafeAreaView
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
        false,
        Array [],
      ]
    }
  >
    <View
      enabled={true}
      keyboardVerticalOffset={0}
      onLayout={[Function]}
      style={
        Array [
          Object {
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minWidth": 320,
          },
          Array [],
          Object {
            "backgroundColor": "transparent",
          },
        ]
      }
    >
      <View
        style={
          Array [
            undefined,
            Object {
              "bottom": 0,
            },
          ]
        }
      >
        <View
          pointerEvents="auto"
          style={
            Object {
              "backgroundColor": "#F5F5F6",
              "borderRadius": 3,
              "shadowColor": "#000000",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.33,
              "shadowRadius": 4,
              "transform": Array [
                Object {
                  "translateY": 1334,
                },
              ],
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "flex-end",
              }
            }
          />
          <RCTScrollView
            style={
              Array [
                Object {
                  "paddingBottom": 16,
                  "paddingHorizontal": 16,
                },
                false,
              ]
            }
          >
            <View />
          </RCTScrollView>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`<Dialog> when {children} 1`] = `
<View
  pointerEvents="none"
  style={
    Object {
      "height": "100%",
      "left": 0,
      "maxHeight": "100%",
      "opacity": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <RCTSafeAreaView
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
        Object {
          "backgroundColor": "rgba(0,0,0,0.5)",
        },
        Array [],
      ]
    }
  >
    <View
      enabled={true}
      keyboardVerticalOffset={0}
      onLayout={[Function]}
      style={
        Array [
          Object {
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minWidth": 320,
          },
          Array [],
          Object {
            "backgroundColor": "transparent",
          },
        ]
      }
    >
      <View
        style={
          Array [
            undefined,
            Object {
              "bottom": 0,
            },
          ]
        }
      >
        <View
          pointerEvents="auto"
          style={
            Object {
              "backgroundColor": "#F5F5F6",
              "borderRadius": 3,
              "shadowColor": "#000000",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.33,
              "shadowRadius": 4,
              "transform": Array [
                Object {
                  "translateY": 1334,
                },
              ],
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "flex-end",
              }
            }
          />
          <RCTScrollView
            style={
              Array [
                Object {
                  "paddingBottom": 16,
                  "paddingHorizontal": 16,
                },
                false,
              ]
            }
          >
            <View>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#4a4a4a",
                      "fontFamily": undefined,
                      "fontWeight": "400",
                      "textAlignVertical": "center",
                    },
                    Object {
                      "fontSize": 16,
                      "lineHeight": 30,
                    },
                    false,
                    Object {},
                  ]
                }
              >
                Hello World
              </Text>
            </View>
          </RCTScrollView>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`<Dialog> when {highlight} 1`] = `
<View
  pointerEvents="none"
  style={
    Object {
      "height": "100%",
      "left": 0,
      "maxHeight": "100%",
      "opacity": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <RCTSafeAreaView
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
        Object {
          "backgroundColor": "rgba(0,0,0,0.5)",
        },
        Array [],
      ]
    }
  >
    <View
      enabled={true}
      keyboardVerticalOffset={0}
      onLayout={[Function]}
      style={
        Array [
          Object {
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minWidth": 320,
          },
          Array [],
          Object {
            "backgroundColor": "transparent",
          },
        ]
      }
    >
      <View
        style={
          Array [
            undefined,
            Object {
              "bottom": 0,
            },
          ]
        }
      >
        <View
          pointerEvents="auto"
          style={
            Object {
              "backgroundColor": "#F5F5F6",
              "borderRadius": 3,
              "shadowColor": "#000000",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.33,
              "shadowRadius": 4,
              "transform": Array [
                Object {
                  "translateY": 1334,
                },
              ],
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "flex-end",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#4a4a4a",
                    "fontFamily": undefined,
                    "fontWeight": "400",
                    "textAlignVertical": "center",
                  },
                  Object {
                    "fontFamily": undefined,
                    "fontSize": 20,
                    "fontWeight": "700",
                    "letterSpacing": -0.83,
                    "lineHeight": 22,
                  },
                  false,
                  Object {
                    "color": "#ffffff",
                    "flex": 1,
                    "padding": 16,
                  },
                ]
              }
            >
              Hello world
            </Text>
            <View>
              <View
                accessible={true}
                onLayout={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                pointerEvents="box-only"
                style={
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "borderRadius": 22,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignContent": "center",
                        "alignItems": "center",
                        "borderRadius": 3,
                        "justifyContent": "center",
                      },
                      Object {
                        "height": 44,
                        "minWidth": 44,
                        "paddingHorizontal": 30,
                      },
                      Object {
                        "alignItems": "center",
                        "display": "flex",
                        "flexDirection": "row",
                      },
                      false,
                      false,
                      Object {
                        "borderRadius": 22,
                      },
                      Object {
                        "paddingHorizontal": 0,
                      },
                      false,
                      false,
                      false,
                      false,
                      false,
                      false,
                      false,
                    ]
                  }
                >
                  <Image
                    resizeMode="contain"
                    source={
                      Object {
                        "testUri": "../../../components/Icon/assets/close_contrast.png",
                      }
                    }
                    style={
                      Array [
                        Object {
                          "backgroundColor": "transparent",
                          "height": 20,
                          "width": 20,
                        },
                        undefined,
                        undefined,
                      ]
                    }
                  />
                  <View
                    style={
                      Array [
                        Object {
                          "alignItems": "center",
                          "display": "flex",
                          "flexDirection": "row",
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "borderRadius": 3,
                        "bottom": 0,
                        "left": 0,
                        "overflow": "hidden",
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      },
                      Object {
                        "borderRadius": 22,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "backgroundColor": "#e0e0e0",
                        "height": 0,
                        "opacity": 0,
                        "width": 0,
                        "zIndex": 0,
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
          <RCTScrollView
            onScroll={[Function]}
            style={
              Array [
                Object {
                  "paddingBottom": 16,
                  "paddingHorizontal": 16,
                },
                false,
              ]
            }
          >
            <View />
          </RCTScrollView>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`<Dialog> when {onClose} 1`] = `
<View
  pointerEvents="none"
  style={
    Object {
      "height": "100%",
      "left": 0,
      "maxHeight": "100%",
      "opacity": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <RCTSafeAreaView
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
        Object {
          "backgroundColor": "rgba(0,0,0,0.5)",
        },
        Array [],
      ]
    }
  >
    <View
      enabled={true}
      keyboardVerticalOffset={0}
      onLayout={[Function]}
      style={
        Array [
          Object {
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minWidth": 320,
          },
          Array [],
          Object {
            "backgroundColor": "transparent",
          },
        ]
      }
    >
      <View
        style={
          Array [
            undefined,
            Object {
              "bottom": 0,
            },
          ]
        }
      >
        <View
          pointerEvents="auto"
          style={
            Object {
              "backgroundColor": "#F5F5F6",
              "borderRadius": 3,
              "shadowColor": "#000000",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.33,
              "shadowRadius": 4,
              "transform": Array [
                Object {
                  "translateY": 1334,
                },
              ],
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "flex-end",
              }
            }
          >
            <View>
              <View
                accessible={true}
                onLayout={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                pointerEvents="box-only"
                style={
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "borderRadius": 22,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignContent": "center",
                        "alignItems": "center",
                        "borderRadius": 3,
                        "justifyContent": "center",
                      },
                      Object {
                        "height": 44,
                        "minWidth": 44,
                        "paddingHorizontal": 30,
                      },
                      Object {
                        "alignItems": "center",
                        "display": "flex",
                        "flexDirection": "row",
                      },
                      false,
                      false,
                      Object {
                        "borderRadius": 22,
                      },
                      Object {
                        "paddingHorizontal": 0,
                      },
                      false,
                      false,
                      false,
                      false,
                      false,
                      false,
                      false,
                    ]
                  }
                >
                  <Image
                    resizeMode="contain"
                    source={
                      Object {
                        "testUri": "../../../components/Icon/assets/close.png",
                      }
                    }
                    style={
                      Array [
                        Object {
                          "backgroundColor": "transparent",
                          "height": 20,
                          "width": 20,
                        },
                        undefined,
                        undefined,
                      ]
                    }
                  />
                  <View
                    style={
                      Array [
                        Object {
                          "alignItems": "center",
                          "display": "flex",
                          "flexDirection": "row",
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "borderRadius": 3,
                        "bottom": 0,
                        "left": 0,
                        "overflow": "hidden",
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      },
                      Object {
                        "borderRadius": 22,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "backgroundColor": "#4a4a4a",
                        "height": 0,
                        "opacity": 0,
                        "width": 0,
                        "zIndex": 0,
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
          <RCTScrollView
            style={
              Array [
                Object {
                  "paddingBottom": 16,
                  "paddingHorizontal": 16,
                },
                false,
              ]
            }
          >
            <View />
          </RCTScrollView>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`<Dialog> when {reverse} 1`] = `
<View
  pointerEvents="auto"
  style={
    Object {
      "height": "100%",
      "left": 0,
      "maxHeight": "100%",
      "opacity": 1,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <RCTSafeAreaView
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
        Object {
          "backgroundColor": "rgba(0,0,0,0.5)",
        },
        Array [],
      ]
    }
  >
    <View
      enabled={true}
      keyboardVerticalOffset={0}
      onLayout={[Function]}
      style={
        Array [
          Object {
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minWidth": 320,
          },
          Array [],
          Object {
            "backgroundColor": "transparent",
          },
        ]
      }
    >
      <View
        style={
          Array [
            undefined,
            Object {
              "bottom": 0,
            },
          ]
        }
      >
        <View
          pointerEvents="auto"
          style={
            Object {
              "backgroundColor": "#F5F5F6",
              "borderRadius": 3,
              "shadowColor": "#000000",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.33,
              "shadowRadius": 4,
              "transform": Array [
                Object {
                  "translateY": 0,
                },
              ],
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "flex-end",
              }
            }
          />
          <RCTScrollView
            style={
              Array [
                Object {
                  "paddingBottom": 16,
                  "paddingHorizontal": 16,
                },
                false,
              ]
            }
          >
            <View />
          </RCTScrollView>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`<Dialog> when {style} 1`] = `
<View
  pointerEvents="none"
  style={
    Object {
      "height": "100%",
      "left": 0,
      "maxHeight": "100%",
      "opacity": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <RCTSafeAreaView
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
        Object {
          "backgroundColor": "rgba(0,0,0,0.5)",
        },
        Array [],
      ]
    }
  >
    <View
      enabled={true}
      keyboardVerticalOffset={0}
      onLayout={[Function]}
      style={
        Array [
          Object {
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minWidth": 320,
          },
          Object {
            "backgroundColor": "rgba(0,255,0,0.25)",
          },
          Object {
            "backgroundColor": "transparent",
          },
        ]
      }
    >
      <View
        style={
          Array [
            undefined,
            Object {
              "bottom": 0,
            },
          ]
        }
      >
        <View
          pointerEvents="auto"
          style={
            Object {
              "backgroundColor": "rgba(0,255,0,0.25)",
              "borderRadius": 3,
              "shadowColor": "#000000",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.33,
              "shadowRadius": 4,
              "transform": Array [
                Object {
                  "translateY": 1334,
                },
              ],
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "flex-end",
              }
            }
          />
          <RCTScrollView
            style={
              Array [
                Object {
                  "paddingBottom": 16,
                  "paddingHorizontal": 16,
                },
                false,
              ]
            }
          >
            <View />
          </RCTScrollView>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`<Dialog> when {styleContainer} 1`] = `
<View
  pointerEvents="none"
  style={
    Object {
      "height": "100%",
      "left": 0,
      "maxHeight": "100%",
      "opacity": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <RCTSafeAreaView
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
        Object {
          "backgroundColor": "rgba(0,0,0,0.5)",
        },
        Object {
          "backgroundColor": "rgba(0,255,0,0.25)",
        },
      ]
    }
  >
    <View
      enabled={true}
      keyboardVerticalOffset={0}
      onLayout={[Function]}
      style={
        Array [
          Object {
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minWidth": 320,
          },
          Array [],
          Object {
            "backgroundColor": "transparent",
          },
        ]
      }
    >
      <View
        style={
          Array [
            undefined,
            Object {
              "bottom": 0,
            },
          ]
        }
      >
        <View
          pointerEvents="auto"
          style={
            Object {
              "backgroundColor": "#F5F5F6",
              "borderRadius": 3,
              "shadowColor": "#000000",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.33,
              "shadowRadius": 4,
              "transform": Array [
                Object {
                  "translateY": 1334,
                },
              ],
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "flex-end",
              }
            }
          />
          <RCTScrollView
            style={
              Array [
                Object {
                  "paddingBottom": 16,
                  "paddingHorizontal": 16,
                },
                false,
              ]
            }
          >
            <View />
          </RCTScrollView>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`<Dialog> when {title} 1`] = `
<View
  pointerEvents="none"
  style={
    Object {
      "height": "100%",
      "left": 0,
      "maxHeight": "100%",
      "opacity": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <RCTSafeAreaView
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
        Object {
          "backgroundColor": "rgba(0,0,0,0.5)",
        },
        Array [],
      ]
    }
  >
    <View
      enabled={true}
      keyboardVerticalOffset={0}
      onLayout={[Function]}
      style={
        Array [
          Object {
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minWidth": 320,
          },
          Array [],
          Object {
            "backgroundColor": "transparent",
          },
        ]
      }
    >
      <View
        style={
          Array [
            undefined,
            Object {
              "bottom": 0,
            },
          ]
        }
      >
        <View
          pointerEvents="auto"
          style={
            Object {
              "backgroundColor": "#F5F5F6",
              "borderRadius": 3,
              "shadowColor": "#000000",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.33,
              "shadowRadius": 4,
              "transform": Array [
                Object {
                  "translateY": 1334,
                },
              ],
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "flex-end",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#4a4a4a",
                    "fontFamily": undefined,
                    "fontWeight": "400",
                    "textAlignVertical": "center",
                  },
                  Object {
                    "fontFamily": undefined,
                    "fontSize": 20,
                    "fontWeight": "700",
                    "letterSpacing": -0.83,
                    "lineHeight": 22,
                  },
                  false,
                  Object {
                    "flex": 1,
                    "padding": 16,
                  },
                ]
              }
            >
              Hello world
            </Text>
          </View>
          <RCTScrollView
            onScroll={[Function]}
            style={
              Array [
                Object {
                  "paddingBottom": 16,
                  "paddingHorizontal": 16,
                },
                false,
              ]
            }
          >
            <View />
          </RCTScrollView>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`<Dialog> when {visible} 1`] = `
<View
  pointerEvents="auto"
  style={
    Object {
      "height": "100%",
      "left": 0,
      "maxHeight": "100%",
      "opacity": 1,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <RCTSafeAreaView
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
        Object {
          "backgroundColor": "rgba(0,0,0,0.5)",
        },
        Array [],
      ]
    }
  >
    <View
      enabled={true}
      keyboardVerticalOffset={0}
      onLayout={[Function]}
      style={
        Array [
          Object {
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minWidth": 320,
          },
          Array [],
          Object {
            "backgroundColor": "transparent",
          },
        ]
      }
    >
      <View
        style={
          Array [
            undefined,
            Object {
              "bottom": 0,
            },
          ]
        }
      >
        <View
          pointerEvents="auto"
          style={
            Object {
              "backgroundColor": "#F5F5F6",
              "borderRadius": 3,
              "shadowColor": "#000000",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.33,
              "shadowRadius": 4,
              "transform": Array [
                Object {
                  "translateY": 0,
                },
              ],
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "flex-end",
              }
            }
          />
          <RCTScrollView
            style={
              Array [
                Object {
                  "paddingBottom": 16,
                  "paddingHorizontal": 16,
                },
                false,
              ]
            }
          >
            <View />
          </RCTScrollView>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;
